--- a/bindinate/bindinate.in
+++ b/bindinate/bindinate.in
@@ -52,6 +52,10 @@ for arg; do
       REGENERATE=$(echo $arg|sed -e 's,.*=,,')
       OUTDIR=.
       ;;
+    --regenerate-raw=* )
+      REGENERATE_RAW=$(echo $arg|sed -e 's,.*=,,')
+      OUTDIR=.
+      ;;
     --gir=*) 
       GIRFILE=$(echo $arg|sed -e 's,.*=,,')
       ;;
@@ -77,13 +81,13 @@ fi
 if [ ! -d $OUTDIR ]; then
 	mkdir -p $OUTDIR
 fi
-if [ ! -d $OUTDIR/sources ]; then
+if [ ! -d $OUTDIR/sources ] && [ -z "$REGENERATE_RAW" ]; then
 	mkdir -p $OUTDIR/sources
 fi
-if [ ! -d $OUTDIR/sources/glue ]; then
+if [ ! -d $OUTDIR/sources/glue ] && [ -z "$REGENERATE_RAW" ]; then
 	mkdir -p $OUTDIR/sources/glue
 fi
-if [ ! -d $OUTDIR/sources/custom ]; then
+if [ ! -d $OUTDIR/sources/custom ] && [ -z "$REGENERATE_RAW" ]; then
 	mkdir -p $OUTDIR/sources/custom
 fi
 if [ ! -d $OUTDIR/out ]; then
@@ -226,11 +230,6 @@ echo "LIBS: $LIBS"
 echo "LIBVERSIONS: $(echo ${LIBVERSIONS} | tr '\n' ' ')"
 echo "BUILDLIBVERSIONS: $(echo ${EFFECTIVEBUILDLIBVERSIONS} | tr '\n' ' ')"
 
-if ! $(@PKG_CONFIG@ --exists $PACKAGE); then
-	echo "Package $PACKAGE not found, exiting"
-	exit 1
-fi
-
 MODVERSION=$(@PKG_CONFIG@ --modversion $PACKAGE)
 if [ -z "$NAME" ]; then
 	NAME=$(echo $NS|tr '[:upper:]' '[:lower:]')
@@ -268,12 +267,21 @@ if [ -z "$LIBRARYNAME" ]; then
 	LIBRARYNAME=$PACKAGE
 fi
 
-if [ -n "$REGENERATE" ]; then
-	echo "Processing $FULLGIRFILE and outputting sources/$NAME-sharp-api.raw"
-	if [ -f $OUTDIR/sources/$GIRFILE-merged.metadata ]; then
-		@GAPIFIXUP@ --api=$FULLGIRFILE --metadata=$OUTDIR/sources/$GIRFILE-merged.metadata
+if [ -n "$REGENERATE" ] || [ "$REGENERATE_RAW" ]; then
+    if [ -z "$REGENERATE_RAW" ]; then
+        REGENERATE_RAW="sources/$NAME-sharp-api.raw"
+    fi
+
+    METADATA_FILE="$(dirname $REGENERATE_RAW)/$GIRFILE-merged.metadata"
+    echo "Possible gir metadata file: $METADATA_FILE"
+
+	if [ -f "$METADATA_FILE" ]; then
+        echo "Processing $METADATA_FILE"
+		@GAPIFIXUP@ --api=$FULLGIRFILE --metadata=$METADATA_FILE
 	fi
-	@XSLTPROC@ -o sources/$NAME-sharp-api.raw @prefix@/lib/bindinator/gir2gapi.xslt $FULLGIRFILE
+
+	echo "Processing $FULLGIRFILE and outputting $REGENERATE_RAW"
+	@XSLTPROC@ -o $REGENERATE_RAW @prefix@/lib/bindinator/gir2gapi.xslt $FULLGIRFILE
 	exit 0
 fi
 
