--- a/bindinate/gir2gapi.xslt.in
+++ b/bindinate/gir2gapi.xslt.in
@@ -923,8 +923,7 @@
 
 	<xsl:template match="gir:field">
 		<xsl:param name="external"/>
-		<!-- Let's skip fields whose types are callbacks, for now -->
-		<xsl:if test="not(gir:callback)">
+		<xsl:if test="not(gir:callback) or not(../@glib:is-gtype-struct-for)">
 
 			<xsl:variable name="writable">
 				<xsl:choose>
@@ -969,7 +968,14 @@
 				</xsl:if>
 			</xsl:variable>
 
-			<field cname="{@name}" access="{$access}" writeable="{$writable}" readable="{$readable}">
+			<xsl:variable name="is_callback">
+				<xsl:choose>
+					<xsl:when test="not(gir:callback)">false</xsl:when>
+					<xsl:otherwise>true</xsl:otherwise>
+				</xsl:choose>
+			</xsl:variable>
+
+			<field cname="{@name}" access="{$access}" writeable="{$writable}" readable="{$readable}" is_callback="{$is_callback}">
 				<xsl:if test="@bits">
 					<xsl:attribute name="bits">
 						<xsl:value-of select="@bits"/>
